Rename haiti needs you link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 <p><strong>Website Maintainer</strong> at <a href="http://www.lanthorn.com"><strong><em>Grand Valley Lanthorn</em></strong></a> <em>2009 to 2011</em><br>Maintained the university newspaper&#39;s website.<br>Created a coupon sharing website for local businesses to market to students.<br>Wrote the weekly crossword puzzle.</p>
 <hr>
 <h3 id="projects">Projects</h3>
-<p><a href="http://haitineedsyou.com"><strong>HaitiNeedsYou.com</strong></a> <em>Grand Rapids GiveCamp 2013</em><br>Led the team to rebuild the website for the non-profit <em>Haiti Needs You</em>.<br>Redesigned the site for a more user-friendly experience.<br>Integrated newsletters, mailing lists, and social media.<br>Integrated a user-friendly donation form through PayPal.</p>
+<p><a href="http://haitineedsyou.com"><strong>Haiti Needs You</strong></a> <em>Grand Rapids GiveCamp 2013</em><br>Led the team to rebuild the website for the non-profit <em>Haiti Needs You</em>.<br>Redesigned the site for a more user-friendly experience.<br>Integrated newsletters, mailing lists, and social media.<br>Integrated a user-friendly donation form through PayPal.</p>
 <p><a href="http://www.creativeyouthcenter.org"><strong>Grand Rapids Creative Youth Center</strong></a> <em>Grand Rapids GiveCamp 2012</em><br>Created a student-tutor progress tracking system for the <em>Grand Rapids Creative Youth Center</em>.<br>Allowed students to sign in and out of tutoring sessions.<br>Allowed tutors to rate student progress and compare across multiple sessions.<br>Provide overviews of student progress.</p>
 <hr>
 <h3 id="open-source">Open Source</h3>
