Clean up and update

--- a/index.html
+++ b/index.html
@@ -1,58 +1,151 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8" />
 
-<title>Joshua Kovach | Software Engineer</title>
-<link rel="stylesheet" type="text/css" href="resume.css">
-<link rel="stylesheet" type="text/css" href="screen.css">
+<head>
+  <meta charset="utf-8" />
+
+  <title>Joshua Kovach | Software Engineer</title>
+  <link rel="stylesheet" type="text/css" href="resume.css">
+  <link rel="stylesheet" type="text/css" href="screen.css">
 </head>
 
 <body class="">
-
-<div class="container">
+  <div class="container">
     <div class="resume">
-        <h1 id="joshua-kovach">Joshua Kovach</h1>
-<h2 id="software-engineer">Software Engineer</h2>
-<blockquote>
-<p><a href="https://github.com/shekibobo">https://github.com/shekibobo</a><br><a href="mailto:kovach.jc@gmail.com">kovach.jc@gmail.com</a></p>
-</blockquote>
-<hr>
-<h3 id="technical">Technical</h3>
-<ol>
-<li>Ruby + Rails</li>
-<li>iOS + Objective-C</li>
-<li>Android + Java</li>
-<li>TDD + RSpec</li>
-<li>Git</li>
-<li>REST APIs</li>
-</ol>
-<hr>
-<h3 id="experience">Experience</h3>
-<p><strong>Software Engineer</strong> at <a href="http://meetmaestro.com"><strong><em>Maestro</em></strong></a> <em>2011 to present</em><br>Designed and built the web API, CMS, and Android client for <a href="http://getrally.com/">Rally</a>.<br>Developed the API and administration system for a large-scale corporate learning program.<br>Built the crowdfunding website <a href="impactmyteam.com">impactmyteam.com</a>.<br>Built the Amway Credibility application for <a href="https://play.google.com/store/apps/details?id=com.maestromobile.amway.am07">Android</a> and <a href="https://itunes.apple.com/us/app/amway-credibility/id501806153?mt=8">iOS</a>.<br>Developed large-scale web applications with comprehensive test suites using RSpec.</p>
-<p><strong>Software Intern</strong> at <a href="http://bloomfire.com"><strong><em>Bloomfire</em></strong></a> <em>Summer 2011</em><br>Maintained and enhanced features on a production e-learning website built in Ruby on Rails.<br>Developed an experimental prototype for creating dynamic content using Spine.js.<br>Learned testing best practices using RSpec and Cucumber.<br>Discovered and fixed severe security vulnerabilities in a live production application.<br>Learned source control best practices using Git.</p>
-<p><strong>Website Maintainer</strong> at <a href="http://www.lanthorn.com"><strong><em>Grand Valley Lanthorn</em></strong></a> <em>2009 to 2011</em><br>Maintained the university newspaper&#39;s website.<br>Created a coupon sharing website for local businesses to market to students.<br>Wrote the weekly crossword puzzle.</p>
-<hr>
-<h3 id="projects">Projects</h3>
-<p><strong>Michigan Outdoors</strong> <em>Code Michigan 2014</em><br>Won 2nd place in regional coding competition.<br>Lead a team of four developing an Android app to aid in finding local state attractions.<br>Integrated with <a href="http://data.michigan.gov">data.michigan.gov</a> APIs using RxJava.</p>
-<p><a href="http://haitineedsyou.com"><strong>Haiti Needs You</strong></a> <em>Grand Rapids GiveCamp 2013</em><br>Led the team to rebuild the website for the non-profit <em>Haiti Needs You</em>.<br>Redesigned the site for a more user-friendly experience.<br>Integrated newsletters, mailing lists, social media, and PayPal donations.</p>
-<p><a href="http://www.creativeyouthcenter.org"><strong>Grand Rapids Creative Youth Center</strong></a> <em>Grand Rapids GiveCamp 2012</em><br>Created a student-tutor progress tracking system for the <em>Grand Rapids Creative Youth Center</em>.<br>Allowed students to sign in and out of tutoring sessions.<br>Allowed tutors to rate student progress and compare across multiple sessions.</p>
-<hr>
-<h3 id="open-source">Open Source</h3>
-<ul>
-<li><a href="https://www.github.com/gregbell/active_admin"><strong>ActiveAdmin</strong></a><br>  The administration framework for Ruby on Rails applications. Active contributor of features and bug fixes.</li>
-<li><a href="https://github.com/ismasan/oat"><strong>Oat</strong></a><br>  Adapters-based API serializers with Hypermedia support for Ruby apps. Active contributor of features and bug fixes.</li>
-<li><a href="https://github.com/sheerun/s3_file_field"><strong>S3FileField</strong></a><br>  jQuery File Upload extension for direct uploading to Amazon S3 using CORS. Fixed several bugs preventing passing of data attributes.</li>
-<li><a href="https://github.com/collectiveidea/awesome_nested_set"><strong>AwesomeNestedSet</strong></a><br>  Implementation of the nested set pattern for ActiveRecord models. Allowed usage of non-standard primary keys.</li>
-<li><a href="https://github.com/shekibobo/time_splitter"><strong>TimeSplitter</strong></a><br>  Easily provides composite accessors for DateTime objects in Ruby. Maintainer.</li>
-</ul>
-<hr>
-<h3 id="education">Education</h3>
-<p><strong>Bachelor of Computer Science</strong> <strong>2004 to 2011</strong><br>    Grand Valley State University, Allendale, Michigan<br>    Minor in Engineering, Mathematics, and Business<br>    President of Upsilon Pi Epsilon, Gamma Chapter</p>
-<p><strong>Associate of Science</strong> <strong>2002 to 2004</strong><br>    Grand Rapids Community College, Grand Rapids, Michigan<br>    Focus on mathematics, engineering, and computer science</p>
+      <h1 id="joshua-kovach">Joshua Kovach</h1>
+      <h2 id="software-engineer">Software Engineer</h2>
+      <blockquote>
+        <p>
+          <a href="https://github.com/shekibobo">https://github.com/shekibobo</a>
+          <br> <a href="mailto:kovach.jc@gmail.com">kovach.jc@gmail.com</a>
+        </p>
+      </blockquote>
+      <hr>
+      <h3 id="technical">Technical</h3>
+      <ol>
+        <li>Android</li>
+        <li>Ruby on Rails</li>
+        <li>Swift</li>
+        <li>Kotlin</li>
+        <li>Test-Driven Development</li>
+        <li>Jetpack</li>
+        <li>RxJava</li>
+        <li>REST APIs</li>
+        <li>Git</li>
+      </ol>
+      <hr>
+      <h3 id="experience">Experience</h3>
+      <p class="job present">
+        <span class="job-title">Software Engineer</span> at <a href="https://collectiveidea.com" class="company">Collective Idea</a>
+        <span class="daterange">2015 to Present</span>
+        <br> Develop and maintain several Android applications for developers and consumers.
+        <br> Write automated test suites for Android applications using Espresso, Robolectric, and JUnit.
+        <br> Develop, test, and maintain several web applications written in Ruby on Rails.
+        <br> Write technical articles for the company blog.
+        <br> Contribute to open source software.
+        <br> Adapted a single application for white-labeled distribution using build flavors and theming.
+      </p>
+      <p class="job">
+        <span class="job-title">Software Consultant</span> at <a href="https://spindance.com" class="company">SpinDance, Inc.</a>
+        <span class="daterange">2014 to 2015</span>
+        <br> Developed consumer mobile application on Android for IoT home appliances.
+        <br> Wrote and maintained tests for Android using Robolectric and JUnit.
+        <br> Developed and tested supporting web API with Ruby on Rails for IoT home appliances.
+      </p>
+      <p class="job">
+        <span class="job-title">Software Engineer</span> at <a href="http://meetmaestro.com" class="company">Maestro</a>
+        <span class="daterange">2011 to 2014</span>
+        <br> Designed and built the web API, CMS, and Android client for an event scheduling application.
+        <br> Developed the API and administration system for a large-scale corporate learning program.
+        <br> Built the crowdfunding website <a href="https://impactmyteam.com">impactmyteam.com</a>.
+        <br> Built the Amway Credibility application for <a href="https://play.google.com/store/apps/details?id=com.maestromobile.amway.am07">Android</a> and <a href="https://itunes.apple.com/us/app/amway-credibility/id501806153?mt=8">iOS</a>.
+        <br> Developed large-scale web applications with comprehensive test suites using RSpec.
+      </p>
+      <p class="job">
+        <span class="job-title">Software Intern</span> at <a href="http://bloomfire.com" class="company">Bloomfire</a>
+        <span class="daterange">Summer 2011</span>
+        <br> Maintained and enhanced features on a production e-learning website built in Ruby on Rails.
+        <br> Developed an experimental prototype for creating dynamic content using Spine.js.
+        <br> Learned testing best practices using RSpec and Cucumber.
+        <br> Discovered and fixed severe security vulnerabilities in a live production application.
+        <br> Learned source control best practices using Git.
+      </p>
+      <p class="job hidden">
+        <span class="job-title">Website Maintainer</span> at <a href="http://www.lanthorn.com" class="company">Grand Valley Lanthorn</a>
+        <span class="daterange">2009 to 2011</span>
+        <br> Maintained the university newspaper&#39;s website.
+        <br> Created a coupon sharing website for local businesses to market to students.
+        <br> Wrote the weekly crossword puzzle.
+      </p>
+      <hr>
+      <h3 id="projects">Projects</h3>
+      <p class="project">
+        <strong>Michigan Outdoors</strong>
+        <em>Code Michigan 2014</em>
+        <br> Won 2nd place in regional coding competition.
+        <br> Led a team of four developing an Android app to aid in finding local state attractions.
+        <br> Integrated with <a href="http://data.michigan.gov">data.michigan.gov</a> APIs using RxJava.
+      </p>
+      <p class="project">
+        <a href="http://haitineedsyou.com"><strong>Haiti Needs You</strong></a>
+        <em>Grand Rapids GiveCamp 2013</em>
+        <br> Led the team to rebuild the website for the non-profit
+        <em>Haiti Needs You</em>.
+        <br> Redesigned the site for a more user-friendly experience.
+        <br> Integrated newsletters, mailing lists, social media, and PayPal donations.
+      </p>
+      <p class="project">
+        <a href="http://www.creativeyouthcenter.org"><strong>Grand Rapids Creative Youth Center</strong></a>
+        <em>Grand Rapids GiveCamp 2012</em>
+        <br> Created a student-tutor progress tracking system for the <em>Grand Rapids Creative Youth Center</em>.
+        <br> Allowed students to sign in and out of tutoring sessions.
+        <br> Allowed tutors to rate student progress and compare across multiple sessions.
+      </p>
+      <hr>
+      <h3 id="open-source">Open Source</h3>
+      <ul class="libraries">
+        <li class="library">
+          <a href="https://www.github.com/ngauthier/domino"><strong>Domino</strong></a>
+          <br> View abstraction for integration testing. Added support for forms and various other features.
+        </li>
+        <li class="library">
+          <a href="https://www.github.com/gregbell/active_admin"><strong>ActiveAdmin</strong></a>
+          <br> The administration framework for Ruby on Rails applications. Active contributor of features and bug fixes.
+        </li>
+        <li class="library">
+          <a href="https://github.com/ismasan/oat"><strong>Oat</strong></a>
+          <br> Adapters-based API serializers with Hypermedia support for Ruby apps. Active contributor of features and bug fixes.
+        </li>
+        <li class="library">
+          <a href="https://github.com/sheerun/s3_file_field"><strong>S3FileField</strong></a>
+          <br> jQuery File Upload extension for direct uploading to Amazon S3 using CORS. Fixed several bugs preventing passing of data attributes.
+        </li>
+        <li class="library">
+          <a href="https://github.com/collectiveidea/awesome_nested_set"><strong>AwesomeNestedSet</strong></a>
+          <br> Implementation of the nested set pattern for ActiveRecord models. Allowed usage of non-standard primary keys.
+        </li>
+        <li class="library">
+          <a href="https://github.com/shekibobo/time_splitter"><strong>TimeSplitter</strong></a>
+          <br> Easily provides composite accessors for DateTime objects in Ruby. Maintainer.
+        </li>
+      </ul>
+      <hr>
+      <h3 id="education">Education</h3>
+      <p class="school">
+        <strong>Bachelor of Computer Science</strong>
+        <span class="daterange">2004 to 2011</span>
+        <br> Grand Valley State University, Allendale, Michigan
+        <br> Minor in Engineering, Mathematics, and Business
+        <br> President of Upsilon Pi Epsilon, Gamma Chapter</p>
+      <p class="school">
+        <strong>Associate of Science</strong>
+        <span class="daterange">2002 to 2004</span>
+        <br> Grand Rapids Community College, Grand Rapids, Michigan
+        <br> Focus on mathematics, engineering, and computer science
+      </p>
 
     </div>
-</div>
-
+  </div>
 </body>
+
 </html>
